// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoriesPanel Both r: and repo: filters are tracked 1`] = `
<RepositoriesPanel
  authenticatedUser={null}
  fetchRecentSearches={[Function]}
  telemetryService={
    Object {
      "log": [Function],
      "logViewEvent": [Function],
    }
  }
>
  <PanelContainer
    className="repositories-panel"
    emptyContent={
      <EmptyPanelContainer
        className="text-muted"
      >
        <small
          className="mb-2"
        >
          <p
            className="mb-1"
          >
            Recently searched repositories will be displayed here.
          </p>
          <p
            className="mb-1"
          >
            Search in repositories with the 
            <strong>
              repo:
            </strong>
             filter:
          </p>
          <p
            className="mb-1"
          >
            <SyntaxHighlightedSearchQuery
              query="repo:sourcegraph/sourcegraph"
            />
          </p>
          <p
            className="mb-1"
          >
            Add the code host to scope to a single repository:
          </p>
          <p
            className="mb-1"
          >
            <SyntaxHighlightedSearchQuery
              query="repo:^git\\\\.local/my/repo$"
            />
          </p>
        </small>
      </EmptyPanelContainer>
    }
    loadingContent={
      <LoadingPanelView
        text="Loading recently searched repositories"
      />
    }
    populatedContent={
      <div
        className="mt-2"
      >
        <div
          className="d-flex mb-1"
        >
          <small>
            Search
          </small>
        </div>
        <dd
          className="text-monospace text-break"
        >
          <small>
            <AnchorLink
              onClick={[Function]}
              to="/search?q=repo:sourcegraph"
            >
              <SyntaxHighlightedSearchQuery
                query="repo:sourcegraph"
              />
            </AnchorLink>
          </small>
        </dd>
        <dd
          className="text-monospace text-break"
        >
          <small>
            <AnchorLink
              onClick={[Function]}
              to="/search?q=repo:test"
            >
              <SyntaxHighlightedSearchQuery
                query="repo:test"
              />
            </AnchorLink>
          </small>
        </dd>
      </div>
    }
    state="populated"
    title="Repositories"
  >
    <div
      className="repositories-panel panelContainer d-flex flex-column"
    >
      <div
        className="d-flex border-bottom header"
      >
        <h4
          className="headerText"
        >
          Repositories
        </h4>
      </div>
      <div
        className="h-100 content"
      >
        <div
          className="mt-2"
        >
          <div
            className="d-flex mb-1"
          >
            <small>
              Search
            </small>
          </div>
          <dd
            className="text-monospace text-break"
            key="sourcegraph-0"
          >
            <small>
              <AnchorLink
                onClick={[Function]}
                to="/search?q=repo:sourcegraph"
              >
                <a
                  href="/search?q=repo:sourcegraph"
                  onClick={[Function]}
                >
                  <SyntaxHighlightedSearchQuery
                    query="repo:sourcegraph"
                  >
                    <span
                      className="text-monospace search-query-link"
                    >
                      <span
                        className="search-filter-keyword"
                      >
                        repo
                        :
                      </span>
                      sourcegraph
                    </span>
                  </SyntaxHighlightedSearchQuery>
                </a>
              </AnchorLink>
            </small>
          </dd>
          <dd
            className="text-monospace text-break"
            key="test-1"
          >
            <small>
              <AnchorLink
                onClick={[Function]}
                to="/search?q=repo:test"
              >
                <a
                  href="/search?q=repo:test"
                  onClick={[Function]}
                >
                  <SyntaxHighlightedSearchQuery
                    query="repo:test"
                  >
                    <span
                      className="text-monospace search-query-link"
                    >
                      <span
                        className="search-filter-keyword"
                      >
                        repo
                        :
                      </span>
                      test
                    </span>
                  </SyntaxHighlightedSearchQuery>
                </a>
              </AnchorLink>
            </small>
          </dd>
        </div>
      </div>
    </div>
  </PanelContainer>
</RepositoriesPanel>
`;

exports[`RepositoriesPanel Show More button is shown if more pages are available 1`] = `
<RepositoriesPanel
  authenticatedUser={null}
  fetchRecentSearches={[Function]}
  telemetryService={
    Object {
      "log": [Function],
      "logViewEvent": [Function],
    }
  }
>
  <PanelContainer
    className="repositories-panel"
    emptyContent={
      <EmptyPanelContainer
        className="text-muted"
      >
        <small
          className="mb-2"
        >
          <p
            className="mb-1"
          >
            Recently searched repositories will be displayed here.
          </p>
          <p
            className="mb-1"
          >
            Search in repositories with the 
            <strong>
              repo:
            </strong>
             filter:
          </p>
          <p
            className="mb-1"
          >
            <SyntaxHighlightedSearchQuery
              query="repo:sourcegraph/sourcegraph"
            />
          </p>
          <p
            className="mb-1"
          >
            Add the code host to scope to a single repository:
          </p>
          <p
            className="mb-1"
          >
            <SyntaxHighlightedSearchQuery
              query="repo:^git\\\\.local/my/repo$"
            />
          </p>
        </small>
      </EmptyPanelContainer>
    }
    loadingContent={
      <LoadingPanelView
        text="Loading recently searched repositories"
      />
    }
    populatedContent={
      <div
        className="mt-2"
      >
        <div
          className="d-flex mb-1"
        >
          <small>
            Search
          </small>
        </div>
        <dd
          className="text-monospace text-break"
        >
          <small>
            <AnchorLink
              onClick={[Function]}
              to="/search?q=repo:test"
            >
              <SyntaxHighlightedSearchQuery
                query="repo:test"
              />
            </AnchorLink>
          </small>
        </dd>
        <dd
          className="text-monospace text-break"
        >
          <small>
            <AnchorLink
              onClick={[Function]}
              to="/search?q=repo:sourcegraph"
            >
              <SyntaxHighlightedSearchQuery
                query="repo:sourcegraph"
              />
            </AnchorLink>
          </small>
        </dd>
        <dd
          className="text-monospace text-break"
        >
          <small>
            <AnchorLink
              onClick={[Function]}
              to="/search?q=repo:test-two"
            >
              <SyntaxHighlightedSearchQuery
                query="repo:test-two"
              />
            </AnchorLink>
          </small>
        </dd>
        <ShowMoreButton
          className="test-repositories-panel-show-more"
          onClick={[Function]}
        />
      </div>
    }
    state="populated"
    title="Repositories"
  >
    <div
      className="repositories-panel panelContainer d-flex flex-column"
    >
      <div
        className="d-flex border-bottom header"
      >
        <h4
          className="headerText"
        >
          Repositories
        </h4>
      </div>
      <div
        className="h-100 content"
      >
        <div
          className="mt-2"
        >
          <div
            className="d-flex mb-1"
          >
            <small>
              Search
            </small>
          </div>
          <dd
            className="text-monospace text-break"
            key="test-0"
          >
            <small>
              <AnchorLink
                onClick={[Function]}
                to="/search?q=repo:test"
              >
                <a
                  href="/search?q=repo:test"
                  onClick={[Function]}
                >
                  <SyntaxHighlightedSearchQuery
                    query="repo:test"
                  >
                    <span
                      className="text-monospace search-query-link"
                    >
                      <span
                        className="search-filter-keyword"
                      >
                        repo
                        :
                      </span>
                      test
                    </span>
                  </SyntaxHighlightedSearchQuery>
                </a>
              </AnchorLink>
            </small>
          </dd>
          <dd
            className="text-monospace text-break"
            key="sourcegraph-1"
          >
            <small>
              <AnchorLink
                onClick={[Function]}
                to="/search?q=repo:sourcegraph"
              >
                <a
                  href="/search?q=repo:sourcegraph"
                  onClick={[Function]}
                >
                  <SyntaxHighlightedSearchQuery
                    query="repo:sourcegraph"
                  >
                    <span
                      className="text-monospace search-query-link"
                    >
                      <span
                        className="search-filter-keyword"
                      >
                        repo
                        :
                      </span>
                      sourcegraph
                    </span>
                  </SyntaxHighlightedSearchQuery>
                </a>
              </AnchorLink>
            </small>
          </dd>
          <dd
            className="text-monospace text-break"
            key="test-two-2"
          >
            <small>
              <AnchorLink
                onClick={[Function]}
                to="/search?q=repo:test-two"
              >
                <a
                  href="/search?q=repo:test-two"
                  onClick={[Function]}
                >
                  <SyntaxHighlightedSearchQuery
                    query="repo:test-two"
                  >
                    <span
                      className="text-monospace search-query-link"
                    >
                      <span
                        className="search-filter-keyword"
                      >
                        repo
                        :
                      </span>
                      test-two
                    </span>
                  </SyntaxHighlightedSearchQuery>
                </a>
              </AnchorLink>
            </small>
          </dd>
          <ShowMoreButton
            className="test-repositories-panel-show-more"
            onClick={[Function]}
          >
            <div
              className="text-center py-3"
            >
              <button
                className="btn btn-link test-repositories-panel-show-more"
                onClick={[Function]}
                type="button"
              >
                Show more
              </button>
            </div>
          </ShowMoreButton>
        </div>
      </div>
    </div>
  </PanelContainer>
</RepositoriesPanel>
`;

exports[`RepositoriesPanel Show More button loads more items 1`] = `
<RepositoriesPanel
  authenticatedUser={null}
  className=""
  fetchRecentSearches={[Function]}
  telemetryService={
    Object {
      "log": [Function],
      "logViewEvent": [Function],
    }
  }
>
  <PanelContainer
    className="repositories-panel"
    emptyContent={
      <EmptyPanelContainer
        className="text-muted"
      >
        <small
          className="mb-2"
        >
          <p
            className="mb-1"
          >
            Recently searched repositories will be displayed here.
          </p>
          <p
            className="mb-1"
          >
            Search in repositories with the 
            <strong>
              repo:
            </strong>
             filter:
          </p>
          <p
            className="mb-1"
          >
            <SyntaxHighlightedSearchQuery
              query="repo:sourcegraph/sourcegraph"
            />
          </p>
          <p
            className="mb-1"
          >
            Add the code host to scope to a single repository:
          </p>
          <p
            className="mb-1"
          >
            <SyntaxHighlightedSearchQuery
              query="repo:^git\\\\.local/my/repo$"
            />
          </p>
        </small>
      </EmptyPanelContainer>
    }
    loadingContent={
      <LoadingPanelView
        text="Loading recently searched repositories"
      />
    }
    populatedContent={
      <div
        className="mt-2"
      >
        <div
          className="d-flex mb-1"
        >
          <small>
            Search
          </small>
        </div>
        <dd
          className="text-monospace text-break"
        >
          <small>
            <AnchorLink
              onClick={[Function]}
              to="/search?q=repo:test"
            >
              <SyntaxHighlightedSearchQuery
                query="repo:test"
              />
            </AnchorLink>
          </small>
        </dd>
        <dd
          className="text-monospace text-break"
        >
          <small>
            <AnchorLink
              onClick={[Function]}
              to="/search?q=repo:sourcegraph"
            >
              <SyntaxHighlightedSearchQuery
                query="repo:sourcegraph"
              />
            </AnchorLink>
          </small>
        </dd>
        <dd
          className="text-monospace text-break"
        >
          <small>
            <AnchorLink
              onClick={[Function]}
              to="/search?q=repo:test-two"
            >
              <SyntaxHighlightedSearchQuery
                query="repo:test-two"
              />
            </AnchorLink>
          </small>
        </dd>
        <dd
          className="text-monospace text-break"
        >
          <small>
            <AnchorLink
              onClick={[Function]}
              to="/search?q=repo:test-three"
            >
              <SyntaxHighlightedSearchQuery
                query="repo:test-three"
              />
            </AnchorLink>
          </small>
        </dd>
        <dd
          className="text-monospace text-break"
        >
          <small>
            <AnchorLink
              onClick={[Function]}
              to="/search?q=repo:r:test-four"
            >
              <SyntaxHighlightedSearchQuery
                query="repo:r:test-four"
              />
            </AnchorLink>
          </small>
        </dd>
        <dd
          className="text-monospace text-break"
        >
          <small>
            <AnchorLink
              onClick={[Function]}
              to="/search?q=repo:test-five"
            >
              <SyntaxHighlightedSearchQuery
                query="repo:test-five"
              />
            </AnchorLink>
          </small>
        </dd>
      </div>
    }
    state="populated"
    title="Repositories"
  >
    <div
      className="repositories-panel panelContainer d-flex flex-column"
    >
      <div
        className="d-flex border-bottom header"
      >
        <h4
          className="headerText"
        >
          Repositories
        </h4>
      </div>
      <div
        className="h-100 content"
      >
        <div
          className="mt-2"
        >
          <div
            className="d-flex mb-1"
          >
            <small>
              Search
            </small>
          </div>
          <dd
            className="text-monospace text-break"
            key="test-0"
          >
            <small>
              <AnchorLink
                onClick={[Function]}
                to="/search?q=repo:test"
              >
                <a
                  href="/search?q=repo:test"
                  onClick={[Function]}
                >
                  <SyntaxHighlightedSearchQuery
                    query="repo:test"
                  >
                    <span
                      className="text-monospace search-query-link"
                    >
                      <span
                        className="search-filter-keyword"
                      >
                        repo
                        :
                      </span>
                      test
                    </span>
                  </SyntaxHighlightedSearchQuery>
                </a>
              </AnchorLink>
            </small>
          </dd>
          <dd
            className="text-monospace text-break"
            key="sourcegraph-1"
          >
            <small>
              <AnchorLink
                onClick={[Function]}
                to="/search?q=repo:sourcegraph"
              >
                <a
                  href="/search?q=repo:sourcegraph"
                  onClick={[Function]}
                >
                  <SyntaxHighlightedSearchQuery
                    query="repo:sourcegraph"
                  >
                    <span
                      className="text-monospace search-query-link"
                    >
                      <span
                        className="search-filter-keyword"
                      >
                        repo
                        :
                      </span>
                      sourcegraph
                    </span>
                  </SyntaxHighlightedSearchQuery>
                </a>
              </AnchorLink>
            </small>
          </dd>
          <dd
            className="text-monospace text-break"
            key="test-two-2"
          >
            <small>
              <AnchorLink
                onClick={[Function]}
                to="/search?q=repo:test-two"
              >
                <a
                  href="/search?q=repo:test-two"
                  onClick={[Function]}
                >
                  <SyntaxHighlightedSearchQuery
                    query="repo:test-two"
                  >
                    <span
                      className="text-monospace search-query-link"
                    >
                      <span
                        className="search-filter-keyword"
                      >
                        repo
                        :
                      </span>
                      test-two
                    </span>
                  </SyntaxHighlightedSearchQuery>
                </a>
              </AnchorLink>
            </small>
          </dd>
          <dd
            className="text-monospace text-break"
            key="test-three-3"
          >
            <small>
              <AnchorLink
                onClick={[Function]}
                to="/search?q=repo:test-three"
              >
                <a
                  href="/search?q=repo:test-three"
                  onClick={[Function]}
                >
                  <SyntaxHighlightedSearchQuery
                    query="repo:test-three"
                  >
                    <span
                      className="text-monospace search-query-link"
                    >
                      <span
                        className="search-filter-keyword"
                      >
                        repo
                        :
                      </span>
                      test-three
                    </span>
                  </SyntaxHighlightedSearchQuery>
                </a>
              </AnchorLink>
            </small>
          </dd>
          <dd
            className="text-monospace text-break"
            key="r:test-four-4"
          >
            <small>
              <AnchorLink
                onClick={[Function]}
                to="/search?q=repo:r:test-four"
              >
                <a
                  href="/search?q=repo:r:test-four"
                  onClick={[Function]}
                >
                  <SyntaxHighlightedSearchQuery
                    query="repo:r:test-four"
                  >
                    <span
                      className="text-monospace search-query-link"
                    >
                      <span
                        className="search-filter-keyword"
                      >
                        repo
                        :
                      </span>
                      r:test-four
                    </span>
                  </SyntaxHighlightedSearchQuery>
                </a>
              </AnchorLink>
            </small>
          </dd>
          <dd
            className="text-monospace text-break"
            key="test-five-5"
          >
            <small>
              <AnchorLink
                onClick={[Function]}
                to="/search?q=repo:test-five"
              >
                <a
                  href="/search?q=repo:test-five"
                  onClick={[Function]}
                >
                  <SyntaxHighlightedSearchQuery
                    query="repo:test-five"
                  >
                    <span
                      className="text-monospace search-query-link"
                    >
                      <span
                        className="search-filter-keyword"
                      >
                        repo
                        :
                      </span>
                      test-five
                    </span>
                  </SyntaxHighlightedSearchQuery>
                </a>
              </AnchorLink>
            </small>
          </dd>
        </div>
      </div>
    </div>
  </PanelContainer>
</RepositoriesPanel>
`;

exports[`RepositoriesPanel consecutive searches with identical repo filters are correctly merged when rendered 1`] = `
<RepositoriesPanel
  authenticatedUser={null}
  fetchRecentSearches={[Function]}
  telemetryService={
    Object {
      "log": [Function],
      "logViewEvent": [Function],
    }
  }
>
  <PanelContainer
    className="repositories-panel"
    emptyContent={
      <EmptyPanelContainer
        className="text-muted"
      >
        <small
          className="mb-2"
        >
          <p
            className="mb-1"
          >
            Recently searched repositories will be displayed here.
          </p>
          <p
            className="mb-1"
          >
            Search in repositories with the 
            <strong>
              repo:
            </strong>
             filter:
          </p>
          <p
            className="mb-1"
          >
            <SyntaxHighlightedSearchQuery
              query="repo:sourcegraph/sourcegraph"
            />
          </p>
          <p
            className="mb-1"
          >
            Add the code host to scope to a single repository:
          </p>
          <p
            className="mb-1"
          >
            <SyntaxHighlightedSearchQuery
              query="repo:^git\\\\.local/my/repo$"
            />
          </p>
        </small>
      </EmptyPanelContainer>
    }
    loadingContent={
      <LoadingPanelView
        text="Loading recently searched repositories"
      />
    }
    populatedContent={
      <div
        className="mt-2"
      >
        <div
          className="d-flex mb-1"
        >
          <small>
            Search
          </small>
        </div>
        <dd
          className="text-monospace text-break"
        >
          <small>
            <AnchorLink
              onClick={[Function]}
              to="/search?q=repo:test"
            >
              <SyntaxHighlightedSearchQuery
                query="repo:test"
              />
            </AnchorLink>
          </small>
        </dd>
        <dd
          className="text-monospace text-break"
        >
          <small>
            <AnchorLink
              onClick={[Function]}
              to="/search?q=repo:sourcegraph"
            >
              <SyntaxHighlightedSearchQuery
                query="repo:sourcegraph"
              />
            </AnchorLink>
          </small>
        </dd>
      </div>
    }
    state="populated"
    title="Repositories"
  >
    <div
      className="repositories-panel panelContainer d-flex flex-column"
    >
      <div
        className="d-flex border-bottom header"
      >
        <h4
          className="headerText"
        >
          Repositories
        </h4>
      </div>
      <div
        className="h-100 content"
      >
        <div
          className="mt-2"
        >
          <div
            className="d-flex mb-1"
          >
            <small>
              Search
            </small>
          </div>
          <dd
            className="text-monospace text-break"
            key="test-0"
          >
            <small>
              <AnchorLink
                onClick={[Function]}
                to="/search?q=repo:test"
              >
                <a
                  href="/search?q=repo:test"
                  onClick={[Function]}
                >
                  <SyntaxHighlightedSearchQuery
                    query="repo:test"
                  >
                    <span
                      className="text-monospace search-query-link"
                    >
                      <span
                        className="search-filter-keyword"
                      >
                        repo
                        :
                      </span>
                      test
                    </span>
                  </SyntaxHighlightedSearchQuery>
                </a>
              </AnchorLink>
            </small>
          </dd>
          <dd
            className="text-monospace text-break"
            key="sourcegraph-1"
          >
            <small>
              <AnchorLink
                onClick={[Function]}
                to="/search?q=repo:sourcegraph"
              >
                <a
                  href="/search?q=repo:sourcegraph"
                  onClick={[Function]}
                >
                  <SyntaxHighlightedSearchQuery
                    query="repo:sourcegraph"
                  >
                    <span
                      className="text-monospace search-query-link"
                    >
                      <span
                        className="search-filter-keyword"
                      >
                        repo
                        :
                      </span>
                      sourcegraph
                    </span>
                  </SyntaxHighlightedSearchQuery>
                </a>
              </AnchorLink>
            </small>
          </dd>
        </div>
      </div>
    </div>
  </PanelContainer>
</RepositoriesPanel>
`;
